# tg

./: .editorconfig  .gitignore  Dockerfile  LICENSE  check.sh  pyproject.toml  readme.md
.github/workflows/: main.yml
src/tg/: __main__.py  colors.py  config.py  controllers.py  models.py  msg.py  tdlib.py  update_handlers.py  utils.py  views.py
tg/: config.py  controllers.py  utils.py  views.py
