[project]
name = "tg"
description = "Terminal Telegram client."
authors = [
    { name = "Zubarev Grigoriy", email = "thirtysix@thirtysix.pw" },
    { name = "Paul Nameless", email = "reacsdas@gmail.com" },
]
license = "MIT"
readme = "readme.md"
requires-python = ">= 3.8"
keywords = [
    "telegram",
    "telegram-client",
    "telegram-cli",
    "tui",
    "tg",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "python-telegram==0.15.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/tg/__init__.py"

[project.urls]
"Source Code" = "https://codeberg.org/thirtysixpw/tg"
"Issue Tracker" = "https://codeberg.org/thirtysixpw/tg/issues"

[project.scripts]
tg = "tg.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
universal = true
dev-dependencies = [
    "black~=20.8b1",
    "flake8~=3.8.4",
    "isort~=5.6.2",
    "mypy~=0.812",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/tg"]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
